# VEX-AIM-MCP

./: .gitignore  .gitmodules  README.md
aim_mcp_server/: README.md  claude_desktop_config.json  pyproject.toml  requirements.txt
aim_mcp_server/aim_mcp/: __init__.py  connection.py  prompts.py  resources.py  server.py
aim_mcp_server/aim_mcp/tools/: __init__.py  _decorators.py  connection_tools.py  kicker.py  led.py  motion.py  screen_tools.py  sensors.py  sound.py  vision.py
aim_mcp_server/aim_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aim_mcp_server/tests/: test_port.py  test_smoke.py
docs/: aim-mcp-architecture.md
skills/aim-mcp-controller/: SKILL.md
skills/vex-aim-programming/: SKILL.md
skills/vex-aim-programming/references/: api-reference.md  code-templates.md  env-setup.md
websocket/: .gitignore
